fix(web-components): created disableHeightConstraint prop
Added prop to remove overflow, max-height and adjust the type of dialog to allow styling. By making
this update, popovers are no longer cut off by the content area

1059

--- a/packages/web-components/src/components/ic-dialog/ic-dialog.css
+++ b/packages/web-components/src/components/ic-dialog/ic-dialog.css
@@ -17,6 +17,21 @@
   transition: opacity var(--ic-easing-transition-slow);
 }
 
+:host(.disable-height-constraint) {
+  background: none;
+  justify-content: unset;
+  align-items: unset;
+}
+
+.dialog.disable-height-constraint {
+  max-height: none;
+  position: relative;
+}
+
+.dialog.disable-height-constraint .content-area {
+  overflow-y: visible;
+}
+
 :host(.fade-in) {
   opacity: 1;
   transition: opacity var(--ic-easing-transition-slow);
@@ -116,6 +131,19 @@
 
 .dialog-control-button {
   width: fit-content;
+}
+
+.backdrop {
+  overflow-y: auto;
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(0 0 0 / 60%);
+  z-index: var(--ic-z-index-dialog);
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 @media (min-width: 800px) {
